# api/api.yaml
@@ -31,6 +31,10 @@ paths:
       responses:
         201:
           description: Account created successfully
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/PostAccountsResponse"
         400:
           description: "Invalid input"
   
@@ -107,6 +111,14 @@ components:
         password:
           type: string
           minLength: 8
+    PostAccountsResponse:
+      type: object
+      required: ["id", "login"]
+      properties:
+        id:
+          type: string
+        login:
+          type: string
     PostLoginRequest:
       type: object
       required: ["login", "password"]
@@ -124,8 +136,8 @@ components:
         token:
           type: string
         expiresAt:
-          type: string
-          format: date-time
+          description: "Unix time in ms"
+          type: integer
     PostGameActionShootRequest:
       type: object
       required: [row, col]
