# internal/interface_adapter/controller/controlaccount/types.gen.go
@@ -3,14 +3,16 @@
 // Code generated by github.com/deepmap/oapi-codegen version v1.9.1 DO NOT EDIT.
 package controlaccount
 
-import (
-	"time"
-)
-
 // PostAccountsRequest defines model for PostAccountsRequest.
 type PostAccountsRequest struct {
 	Login    string `json:"login"`
 	Password string `json:"password"`
+}
+
+// PostAccountsResponse defines model for PostAccountsResponse.
+type PostAccountsResponse struct {
+	Id    string `json:"id"`
+	Login string `json:"login"`
 }
 
 // PostLoginRequest defines model for PostLoginRequest.
@@ -21,8 +23,9 @@ type PostLoginRequest struct {
 
 // PostLoginResponse defines model for PostLoginResponse.
 type PostLoginResponse struct {
-	ExpiresAt time.Time `json:"expiresAt"`
-	Token     string    `json:"token"`
+	// Unix time in ms
+	ExpiresAt int    `json:"expiresAt"`
+	Token     string `json:"token"`
 }
 
 // CreateAccountJSONBody defines parameters for CreateAccount.
